--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -1031,17 +1031,15 @@ GtkTextView {
   .titlebar .stack-switcher > .button.titlebutton {
     outline-offset: -3px; }
     .stack-switcher > .button > .label {
-      padding-left: 4px;
-      padding-right: 4px; }
+      padding-left: 6px;
+      padding-right: 6px; }
     .stack-switcher > .button > GtkImage, .header-bar .stack-switcher > .button.titlebutton > GtkImage,
     .titlebar .stack-switcher > .button.titlebutton > GtkImage {
       padding-left: 4px;
-      padding-right: 4px;
-      padding-top: 0px;
-      padding-bottom: 0px; }
+      padding-right: 4px; }
     .stack-switcher > .button.text-button, .header-bar .stack-switcher > .text-button.button.titlebutton,
     .titlebar .stack-switcher > .text-button.button.titlebutton {
-      padding: 3px 8px 4px 8px; }
+      padding: 3px 6px 4px 6px; }
     .stack-switcher > .button.image-button, .header-bar .stack-switcher > .titlebutton.button,
     .titlebar .stack-switcher > .titlebutton.button {
       padding: 5px 2px; }
@@ -1060,7 +1058,7 @@ GtkTextView {
 
 .stack-switcher > .button.needs-attention > .label, .stack-switcher > .button.needs-attention > GtkImage, .sidebar-item.needs-attention > .label {
   animation: needs_attention 150ms ease-in;
-  background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#3583d5), to(transparent)), -gtk-gradient(radial, center center, 0, center center, 0.45, to(rgba(0, 0, 0, 0.81176)), to(transparent));
+  background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#3583d5), to(transparent)), -gtk-gradient(radial, center center, 0, center center, 0.5, to(rgba(0, 0, 0, 0.81176)), to(transparent));
   background-size: 6px 6px, 6px 6px;
   background-repeat: no-repeat;
   background-position: right 3px, right 2px; }
